# goldfish-finance

./: Anchor.toml
programs/goldfish-finance/: Cargo.toml
programs/goldfish-finance/src/: instructions.rs  lib.rs  state.rs
programs/goldfish-finance/src/instructions/: approve.rs  create_pool.rs  deposit.rs  request_borrow.rs
tests/: goldfish-finance.ts
